--- a/01. PARTIE LEGISLATIVE/Article L5785-1 - 23078568.md
+++ b/01. PARTIE LEGISLATIVE/Article L5785-1 - 23078568.md
@@ -1,60 +1,1682 @@
 # Article L5785-1
 
-Les articles L. 5511-1 à L. 5511-5, à l'exception du b du 3° de l'article L. 5511-1, L. 5512-1 à L. 5512-4, L. 5513-1, L.
-5513-2, L. 5514-1, L. 5514-2, 
-L. 5521-1 à L. 5521-5, L. 5522-1 à L. 5522-4 à l'exception du II de l'article L. 5522-3, L. 5523-1 à L. 5523-6, 
-L. 5524-1 à L. 5524-4, 
-L. 5531-1 à L. 5532-1, L. 5533-1 à L. 5533-4, L. 5542-18, L. 5542-19, L. 5542-21-1, L. 5542-56, L. 5544-14, 
-L. 5545-3-1, 
-L. 5545-9-1, L. 5545-10, L. 5545-13, L. 5546-1-1 à L. 5546-1-9, 
-L. 5546-3, les II et III de l'article L. 5549-1, l'article L. 5551-3, l'article L. 5553-11, et les articles L. 5571-1 à L.
-5571-4 sont applicables à Wallis-et-Futuna. 
+I.-Sont applicables à Wallis-et-Futuna, sous réserve des dispositions d'adaptations prévues au présent chapitre, les
+dispositions des titres Ier à VII du livre V et des titres II à IV du livre VI de la présente partie mentionnées dans la
+colonne de gauche du tableau ci-après, dans leur rédaction indiquée dans la colonne de droite du même tableau : 
 
-Les articles L. 5511-1 à L. 5511-5, à l'exception du b du 3° de l'article L. 5511-1, L. 5512-1 à L. 5512-4, L. 5513-1, L.
-5513-2, L. 5514-1, L. 5514-2, L. 5521-1-1 et L. 5521-1-2, L. 5521-4, L. 5531-1 à L. 5532-1, L. 5533-1 à L. 5533-4, L.
-5542-18, L. 5542-19, L. 5542-56, L. 5544-14, L. 5545-3-1, L. 5545-10, L. 5546-1-1 à L. 5546-1-9 et L. 5571-1 à L. 5571-4
-applicables aux marins, sont également applicables aux gens de mer autres que marins.
+<table>
+    <tbody>
+      <tr>
+        <th>
 
-**Nota:**
+DISPOSITIONS APPLICABLES 
 
-Conformément à l'article 18 de la loi n° 2016-816 du 20 juin 2016, les présentes dispositions entrent en vigueur à une date
-fixée par décret en Conseil d'Etat et, au plus tard, six mois après la promulgation de ladite loi.
+</th>
+        <th>
+
+DANS LEUR RÉDACTION 
+
+</th>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5511-1 (à l'exception du b du 3°) 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5511-3 à L. 5511-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-5 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5512-1 à L. 5512-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5513-1 et L. 5513-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5514-1 et L. 1514-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5521-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5521-1-1 et L. 5521-1-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5521-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-819 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5521-2-1 et L. 5521-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5521-4 et L. 5521-5 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5522-1 à L. 5522-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5522-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5522-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5523-1 et L. 5523-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5523-3 et L. 5523-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2012-1218 du 2 novembre 2012
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5523-5 et L. 5523-6 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5524-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5524-2 et L. 5524-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5524-3-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2011-204 du 24 février 2011
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5524-3-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5524-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5531-1 à L. 5531-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-3-1 à L. 5531-3-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-4 à L. 5531-14 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-14-1 et L. 5531-14-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2012-1218 du 2 novembre 2012 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5531-15 à L. 5531-18 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-19 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-431 du 28 mai 2013
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-20 à L. 5531-49 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5532-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5533-1 à L. 5534-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-1 (à l'exception de son troisième alinéa) 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-5-1 et L. 5542-6 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-18 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-18-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-19 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-21 (à l'exception des alinéas premier à troisième) 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-21-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-23 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-32-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-33-1 à L. 5542-33-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-39-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-51 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-1088 du 8 août 2016
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-56 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5544-13 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5544-14 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5544-27 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5544-28 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5545-3-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5545-7 et L. 5545-8 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5545-9 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5545-9-1 et L. 5545-10 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5545-13 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5546-1-1 à L. 5546-1-5 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5546-1-6 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5546-1-7 à L. 5546-1-9 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5546-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5549-1 (à l'exception du I) 
+
+</td>
+        <td valign="middle">
+
+Résultant de de l'ordonnance n° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5551-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5553-11 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5571-1 à L. 5571-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5571-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5621-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5621-3 et L. 5621-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5621-12 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5621-14 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5621-16 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5623-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5623-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5623-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5623-5 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5623-6 et L. 5623-7 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5623-10 et L. 5623-11 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5631-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5642-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+    </tbody>
+  </table>
+
+II.-Sous réserve des dispositions d'adaptations prévues au présent chapitre, les dispositions des titres Ier à VII du livre V
+et des titres II à IV du livre VI de la présente partie applicables aux marins mentionnées dans la colonne de gauche du
+tableau ci-après, dans leur rédaction indiquée dans la colonne de droite du même tableau sont également applicables aux gens
+de mer autres que marins : 
+
+<table>
+    <tbody>
+      <tr>
+        <th>
+
+DISPOSITIONS APPLICABLES 
+
+</th>
+        <th>
+
+DANS LEUR RÉDACTION 
+
+</th>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5511-1 (à l'exception du b du 3°) 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5511-3 à L. 5511-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5511-5 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5512-1 à L. 5512-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5513-1 et L. 5513-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5514-1 et L. 5514-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5521-1-1 et L. 5521-1-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2016-1686 du 8 décembre 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5521-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5531-1 à L. 5531-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5531-4 à L. 5531-14 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5531-14-1 et L. 5531-14-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2012-1218 du 2 novembre 2012 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5531-15 à L. 5531-18 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5531-19 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-431 du 28 mai 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5532-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5533-1 à L. 5534-2 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-1 (à l'exception de son troisième alinéa) 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-5-1 et L. 5542-6 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-6-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2015-990 du 6 août 2015
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-18 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-18-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-19 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-21 (à l'exception des alinéas premier à troisième) 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-21-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-23 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-32-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-33-1 à L. 5542-33-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-39-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5542-51 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-1088 du 8 août 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5542-56 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5544-13 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5544-14 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5544-27 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5544-28 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5545-3-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5545-9 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5545-9 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5545-9-1 et L. 5545-10 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5546-1-1 à L. 5546-1-5 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5546-1-6 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5546-1-7 à L. 5546-1-9 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5546-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5571-1 à L. 5571-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5571-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2016-816 du 20 juin 2016 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5621-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5621-3 et L. 5621-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5621-12 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5621-14 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5621-16 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5623-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5623-3 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5623-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5623-5 
+
+</td>
+        <td valign="middle">
+
+Résultant de l'ordonnance n° 2010-1307 du 28 octobre 2010 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5623-6 et L. 5623-7 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td valign="middle" align="left">
+
+L. 5623-10 et L. 5623-11 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5631-4 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+      <tr>
+        <td align="left" valign="middle">
+
+L. 5642-1 
+
+</td>
+        <td valign="middle">
+
+Résultant de la loi n° 2013-619 du 16 juillet 2013 
+
+</td>
+      </tr>
+    </tbody>
+  </table>
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
+	**Cite**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Ordonnance n°2011-204 du 24 février 2011
+	  - Ordonnance n°2012-1218 du 2 novembre 2012
+	  - Loi n°2013-431 du 28 mai 2013
+	  - Loi n°2013-619 du 16 juillet 2013
+	  - Loi n°2015-990 du 6 août 2015
+	  - Loi n°2016-816 du 20 juin 2016
+	  - Loi n°2016-1088 du 8 août 2016
+	  - Ordonnance n°2016-1686 du 8 décembre 2016
 
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
-	  - Loi n°2016-816 du 20 juin 2016 - art. 47
-
-	**Cite**:
-
-	  - Code des transports - art. L5511-1
-	  - Code des transports - art. L5512-1
-	  - Code des transports - art. L5513-1
-	  - Code des transports - art. L5514-1
-	  - Code des transports - art. L5521-1
-	  - Code des transports - art. L5522-1
-	  - Code des transports - art. L5522-3
-	  - Code des transports - art. L5523-1
-	  - Code des transports - art. L5524-1
-	  - Code des transports - art. L5531-1
-	  - Code des transports - art. L5533-1
-	  - Code des transports - art. L5542-18
-	  - Code des transports - art. L5542-21-1
-	  - Code des transports - art. L5542-56
-	  - Code des transports - art. L5544-14
-	  - Code des transports - art. L5545-10
-	  - Code des transports - art. L5545-13
-	  - Code des transports - art. L5545-3-1
-	  - Code des transports - art. L5545-9-1
-	  - Code des transports - art. L5546-1-1
-	  - Code des transports - art. L5546-3
-	  - Code des transports - art. L5549-1
-	  - Code des transports - art. L5551-3 (V)
-	  - Code des transports - art. L5553-11 (V)
-	  - Code des transports - art. L5571-1
+	  - Ordonnance n°2016-1314 du 6 octobre 2016 - art. 1
+	  - Ordonnance n°2016-1686 du 8 décembre 2016 - art. 7 (V)
