--- a/01. PARTIE LEGISLATIVE/Article L5785-3 - 23078564.md
+++ b/01. PARTIE LEGISLATIVE/Article L5785-3 - 23078564.md
@@ -2,17 +2,18 @@
 
 Pour l'application à Wallis-et-Futuna de l'article L. 5542-18 : 
 
-1° A la fin du premier alinéa, les mots : " inscription à l'état des services " sont remplacés par le mot : " embarquement
-" ; 
+1° A la fin du premier alinéa, les mots : "inscription à l'état des services" sont remplacés par le mot : "embarquement" ; 
 
-2° A la fin du cinquième alinéa, les mots : " mentionné au III de l'article L. 5542-3 " sont remplacés par les mots : " à la
+2° A la fin du cinquième alinéa, les mots : "mentionné au III de l'article L. 5542-3" sont remplacés par les mots : " à la
 part ".
+
+3° Au dernier alinéa, les mots : "Par exception aux dispositions de l'article L. 5541-1," ne sont pas applicables.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
+	  - Ordonnance n°2016-1314 du 6 octobre 2016 - art. 1
 
 	**Cite**:
 
