--- a/01. PARTIE LEGISLATIVE/Article L5795-5 - 23078520.md
+++ b/01. PARTIE LEGISLATIVE/Article L5795-5 - 23078520.md
@@ -1,7 +1,7 @@
 # Article L5795-5
 
-Aucun marin de moins de seize ans révolus ne peut être embarqué à titre professionnel sur un navire immatriculé dans les
-Terres australes et antarctiques françaises.
+A bord des navires immatriculés aux Terres australes et antarctiques françaises, il est interdit d'employer des jeunes âgés
+de moins de dix-huit ans
 
 **Liens relatifs à cet article**
 
@@ -11,4 +11,4 @@ Terres australes et antarctiques françaises.
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 30 (V)
+	  - Ordonnance n°2016-1314 du 6 octobre 2016 - art. 3
