--- a/02. PARTIE REGLEMENTAIRE/Article R1331-2 - 28996727.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-2 - 28996727.md
@@ -11,15 +11,17 @@ intervient dans les conditions prévues au 1° ou au 3° de l'article L. 1262-1 
 
 III.-La durée de validité de cette attestation est celle indiquée par l'entreprise, dans la limite maximale de six mois à
 compter de sa date d'établissement. L'attestation peut couvrir plusieurs opérations de détachement relevant des dispositions
-des 1° et 3° de l'article L. 1262-1 précité, au cours de cette période. 
+des 1° et 3° de l'article L. 1262-1 précité, et de l'article L. 1262-2 du code du travail, au cours de cette période. 
 
 IV.-Cette attestation est établie en langue française avant le début de la première opération de détachement. Elle est datée
 et signée et comporte : 
 
 1° Le nom ou la raison sociale ainsi que les adresses postale et électronique, les coordonnées téléphoniques de l'entreprise
-ou de l'établissement qui emploie habituellement le salarié, la forme juridique de l'entreprise, les noms, prénoms, date et
-lieu de naissance du ou des dirigeants, la désignation du ou des organismes de sécurité sociale ou assimilés auxquels
-l'entreprise verse les cotisations de sécurité sociale ou assimilées ; 
+ou de l'établissement qui emploie habituellement le salarié, la forme juridique de l'entreprise, son numéro individuel
+d'identification fiscale au titre de l'assujettissement à la taxe sur la valeur ajoutée, les noms, prénoms, date et lieu de
+naissance du ou des dirigeants, l'Etat auquel est attaché la législation de sécurité sociale dont il relève au titre de
+l'activité qu'il réalise en France et, s'il s'agit d'un Etat autre que la France, si un formulaire concernant la législation
+de sécurité sociale applicable a été demandé à l'institution compétente ; 
 
 2° Les nom et prénoms, les date et lieu de naissance, l'adresse de résidence habituelle, la nationalité, la date de signature
 du contrat de travail et le droit du travail applicable au contrat de travail, la qualification professionnelle du salarié
@@ -42,10 +44,6 @@ par route, et abrogeant la directive 96/26/ CE du Conseil.
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Modifié par**:
-
-	  - Décret n°2016-418 du 7 avril 2016 - art. 1
-
 	**Cité par**:
 
 	  - Arrêté du 29 juin 2016 - art. 1 (VT)
@@ -53,7 +51,13 @@ par route, et abrogeant la directive 96/26/ CE du Conseil.
 	  - Code des transports - art. R1331-3 (VD)
 	  - Code des transports - art. R1331-5 (V)
 
+	**Modifié par**:
+
+	  - Décret n°2017-825 du 5 mai 2017 - art. 9
+
 	**Cite**:
 
 	  - Code du travail - art. L1221-15-1
-	  - Code des transports - art. L1262-1
+	  - Code du travail - art. L1262-1 (V)
+	  - Code du travail - art. L1262-2-1 (V)
+	  - Code des transports - art. R1331-8 (V)
