--- a/02. PARTIE REGLEMENTAIRE/Article R1331-3 - 28996729.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-3 - 28996729.md
@@ -1,19 +1,22 @@
 # Article R1331-3
 
-1° Lorsque le détachement relève du 2° de l'article L. 1262-1 ou de l'article L. 1262-2 du code du travail, l'attestation
+I.-Lorsque le détachement relève du 2° de l'article L. 1262-1 ou de l'article L. 1262-2 du code du travail, l'attestation
 mentionnée à l'article R. 1331-2 comporte en outre le nom ou la raison sociale ainsi que les adresses postale et
-électronique, les coordonnées téléphoniques et le numéro d'identification SIRET de l'entreprise ou de l'établissement
-d'accueil en France du salarié détaché, la date du début du détachement et la date prévue de sa fin, les modalités de prise
-en charge par l'entreprise des frais de voyage, et le cas échéant l'adresse du ou des lieux d'hébergement du salarié ; 
+électronique, le cas échéant, les coordonnées téléphoniques et le numéro d'identification SIRET de l'entreprise ou de
+l'établissement d'accueil en France du salarié détaché, la date du début du détachement et la date prévue de sa fin, les
+modalités de prise en charge par l'entreprise des frais de voyage, et le cas échéant l'adresse du ou des lieux d'hébergement
+du salarié ; 
 
-2° Lorsque le détachement relève de l'article L. 1262-2 du code du travail, en lieu et place des mentions prévues au 1° de
+II.-Lorsque le détachement relève de l'article L. 1262-2 du code du travail, en lieu et place des mentions prévues au 1° de
 l'article R. 1331-2, l'attestation comporte le nom ou la raison sociale ainsi que les adresses postale et électronique, les
 coordonnées téléphoniques de l'entreprise ou de l'établissement de l'entreprise de travail temporaire qui emploie
-habituellement le salarié, la forme juridique de l'entreprise, les références de son immatriculation à un registre
-professionnel ou toute autre référence équivalente, les noms, prénoms, date et lieu de naissance du ou des dirigeants, la
-désignation du ou des organismes auxquels l'entrepreneur de travail temporaire verse les cotisations de sécurité sociale
-l'identité de l'organisme auprès duquel a été obtenue une garantie financière ou une garantie équivalente dans le pays
-d'origine.
+habituellement le salarié, la forme juridique de l'entreprise, son numéro individuel d'identification fiscale au titre de
+l'assujettissement à la taxe sur la valeur ajoutée ou, à défaut de détenir un tel numéro, les références de son
+immatriculation à un registre professionnel ou toute autre référence équivalente, les noms, prénoms, date et lieu de
+naissance du ou des dirigeants, ainsi que l'identité de l'organisme auprès duquel a été obtenue une garantie financière ou
+une garantie équivalente dans le pays d'origine, l'Etat auquel est attachée la législation de sécurité sociale dont il relève
+au titre de l'activité qu'il réalise en France et, s'il s'agit d'un Etat autre que la France, la mention de la demande d'un
+formulaire concernant la législation de sécurité sociale applicable à l'institution compétente.
 
 **Liens relatifs à cet article**
 
@@ -23,7 +26,7 @@ d'origine.
 
 	**Modifié par**:
 
-	  - Décret n°2016-418 du 7 avril 2016 - art. 1
+	  - Décret n°2017-825 du 5 mai 2017 - art. 9
 
 	**Cite**:
 
