--- a/02. PARTIE REGLEMENTAIRE/Article R1331-4 - 28996731.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-4 - 28996731.md
@@ -1,7 +1,7 @@
 # Article R1331-4
 
-I.-Le représentant de l'entreprise conserve et présente les documents suivants à la demande des agents de contrôle mentionnés
-à l'article L. 8271-1-2 du code du travail : 
+I.-Le représentant de l'entreprise conserve et présente, sans délai, les documents suivants à la demande des agents de
+contrôle mentionnés à l'article L. 8271-1-2 du code du travail : 
 
 1° Les bulletins de paie correspondant à la période du détachement de chaque salarié détaché ou tout document équivalent
 attestant de la rémunération et comportant les mentions suivantes : 
@@ -18,7 +18,12 @@ c) Congés et jours fériés et éléments de rémunération s'y rapportant ;
 3° La copie de la désignation par l'entreprise de son représentant conformément aux dispositions de l'article R. 1263-2-1 du
 code du travail ; 
 
-4° S'il y a lieu, l'intitulé de la convention collective de branche applicable au salarié. 
+4° S'il y a lieu, l'intitulé de la convention collective de branche applicable au salarié ; 
+
+Les documents mentionnés ci-dessus sont traduits en langue française. 
+
+Pour les entreprises qui ne sont pas établies dans un Etat membre de l'Union européenne dont la monnaie est l'euro, les
+sommes sont converties en euros. 
 
 II.-Dans le cas où l'entreprise détachant un salarié roulant ou navigant sur le territoire français est établie en dehors de
 l'Union européenne, le document atteste de la régularité de sa situation sociale au regard d'une convention internationale de
@@ -33,7 +38,7 @@ protection sociale chargé du recouvrement des cotisations sociales lui incomban
 
 	**Modifié par**:
 
-	  - Décret n°2016-418 du 7 avril 2016 - art. 1
+	  - Décret n°2017-825 du 5 mai 2017 - art. 9
 
 	**Cite**:
 
