--- a/02. PARTIE REGLEMENTAIRE/Article R1331-6 - 32379873.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-6 - 32379873.md
@@ -13,16 +13,28 @@ l'obligation mentionnée au second alinéa de l'article L. 1262-4-1 du code du t
 2° Lorsque le détachement du salarié relève du 1° de l'article L. 1262-1 du code du travail, l'agent de contrôle informe le
 destinataire s'il est la seule partie au contrat mentionné à l'article L. 132-8 du code de commerce établie en France. En ce
 cas, le destinataire est tenu aux obligations mises à la charge du donneur d'ordre en application des articles L. 3245-2, R.
-3245-1 à R. 3245-4, L. 4231-1, R. 4231-1 à R. 4231-4 et L. 8281-1 et R. 8281-1 à R. 8281-4 du code du travail.
+3245-1 à R. 3245-4, L. 4231-1, R. 4231-1 à R. 4231-4 et L. 8281-1 et R. 8281-1 à R. 8281-4 du code du travail. 
+
+III.-Pour l'application du IV de l'article L. 1262-2-1 du code du travail : 
+
+1° La déclaration établie par l'entreprise utilisatrice a une durée de validité indiquée par celle-ci dans une limite de six
+mois. La déclaration peut couvrir plusieurs opérations de détachement au cours de cette période ; 
+
+2° La déclaration, dont le modèle est défini par arrêté du ministre chargé du travail, est adressée par voie dématérialisée
+aux services de l'inspection du travail.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-418 du 7 avril 2016 - art. 1
+	  - Décret n°2017-825 du 5 mai 2017 - art. 9
 
 	**Cite**:
 
+	  - Code de commerce - art. L132-8 (V)
+	  - Code du travail - art. L1262-1 (V)
+	  - Code du travail - art. L1262-2 (V)
 	  - Code du travail - art. L1262-4-1
 	  - Code du travail - art. R4231-1
 	  - Code du travail - art. R8281-1
+	  - Code des transports - art. L1331-2 (V)
