--- a/02. PARTIE REGLEMENTAIRE/Article R3122-1 - 30048483.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3122-1 - 30048483.md
@@ -1,50 +1,51 @@
 # Article R3122-1
 
-I. - La demande d'inscription au registre des voitures de transport avec chauffeur prévu à l'article L. 3122-3 est adressée
-au gestionnaire par voie électronique. Elle est accompagnée d'une attestation de l'assurance, couvrant la responsabilité
-civile professionnelle, mentionnée à l'article L. 3120-4 et, le cas échéant, d'une copie du justificatif d'immatriculation de
-l'entreprise. 
+I.-La demande d'inscription au registre des voitures de transport avec chauffeur prévu à l'article L. 3122-3 est adressée au
+gestionnaire par voie électronique. Elle est accompagnée d'une attestation de l'assurance, couvrant la responsabilité civile
+professionnelle, mentionnée à l'article L. 3120-4 et, , d'une copie du justificatif d'immatriculation de l'entreprise à jour.
 
 Lorsque la demande d'inscription est formée par une personne physique, elle mentionne l'état civil, la profession et le
-domicile du demandeur ainsi que l'adresse de son principal établissement. 
+domicile du demandeur ainsi que l'adresse de son principal établissement.
 
 Lorsque la demande d'inscription est présentée au nom d'une personne morale, elle mentionne sa dénomination sociale, sa forme
 juridique, son adresse, son lieu d'établissement, ainsi que l'état civil et le domicile du ou de ses représentants légaux,
-seuls habilités à présenter la demande. 
+seuls habilités à présenter la demande.
 
-II. - Le dossier d'inscription est composé : 
+II.-Le dossier d'inscription est composé :
 
-1° D'un justificatif de la capacité financière mentionnée à l'article L. 3122-4 ; 
+1° D'un justificatif de la capacité financière mentionnée à l'article L. 3122-4 ;
 
 2° Pour chaque voiture de transport avec chauffeur, d'une copie du certificat d'immatriculation mentionné au I de l'article
-R. 322-1 du code de la route ; 
+R. 322-1 du code de la route ;
 
-3° Pour chaque conducteur, d'une copie de la carte professionnelle mentionnée à l'article L. 3122-8. 
+3° Pour chaque conducteur, d'une copie de la carte professionnelle mentionnée à l'article L. 3120-2-2.
 
 Sous réserve du III ci-dessous, les exploitants inscrits au registre sont tenus de porter à la connaissance du gestionnaire,
-dans un délai maximum de trois mois et par voie électronique, tout changement relatif aux informations mentionnées aux I et
-II afin que le gestionnaire procède à sa mise à jour. 
+dans un délai maximum de quinze jours francs et par voie électronique, tout changement relatif aux informations mentionnées
+aux I et II afin que le gestionnaire procède à sa mise à jour.
 
-III. Le recours exceptionnel à des véhicules ou des conducteurs donne lieu à l'envoi par l'exploitant, selon le même mode et
-sans délai, des documents mentionnés au 2° et au 3° du II assortis de la période de ce recours exceptionnel. Ces informations
-ne sont pas prises en compte pour la mise à jour du registre. 
+III. - Les exploitants peuvent avoir recours, à titre exceptionnel, à des véhicules supplémentaires en cas d'impossibilité
+matérielle d'utiliser les véhicules inscrits au registre. Ils sont, dans ce cas, tenus d'envoyer au gestionnaire du registre,
+selon le même mode, le certificat mentionné au 2° du II assorti de la période correspondant à ce recours exceptionnel, dont
+la durée ne peut excéder un mois.
 
-IV. - Un arrêté conjoint des ministres chargés, respectivement, de l'économie et des transports et du ministre de l'intérieur
-précise les modalités d'application du présent article.
+Ils peuvent également avoir recours, à titre exceptionnel, à des véhicules ou à des conducteurs dans le cadre de
+manifestations commerciales, sportives, culturelles, éducatives ou politiques ou d'événements précis justifiant un tel
+recours. Ils sont, dans ce cas, tenus d'envoyer préalablement au gestionnaire du registre, selon le même mode, les documents
+mentionnés aux 2° et 3° du II assortis de la période correspondant à ce recours exceptionnel, dont la durée ne peut excéder
+un mois.
+
+Les informations transmises en application des deux alinéas précédents ne sont pas prises en compte pour la mise à jour du
+registre.
 
 **Nota:**
 
-Conformément à l'article 7 III 1° du décret n° 2014-1725 du 30 décembre 2014, entrent en vigueur à une date fixée par un
-arrêté des ministres chargés, respectivement, de l'économie et des transports et du ministre de l'intérieur et au plus tard
-au 1er janvier 2016, au I et au III de l'article R. 3122-1, les mots : "par voie électronique".
+Décret n° 2017-483 du 6 avril 2017, article 14 I : Ces dispositions entrent en vigueur à des dates fixées par arrêté du
+ministre chargé des transports, et au plus tard le 1er juillet 2017.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -59,10 +60,14 @@ au 1er janvier 2016, au I et au III de l'article R. 3122-1, les mots : "par voie
 	  - Code des transports - art. R3122-9 (M)
 	  - Code des transports - art. R3551-2 (V)
 
+	**Modifié par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 4
+
 	**Cite**:
 
-	  - Code de la route. - art. R322-1 (M)
-	  - Code des transports - art. L3120-4 (V)
-	  - Code des transports - art. L3122-3 (V)
-	  - Code des transports - art. L3122-4 (V)
-	  - Code des transports - art. L3122-8 (V)
+	  - Code de la route. - art. R322-1
+	  - Code des transports - art. L3120-4
+	  - Code des transports - art. L3122-3
+	  - Code des transports - art. L3122-4
+	  - Code des transports - art. L3122-8
