--- a/02. PARTIE REGLEMENTAIRE/Article R3122-2 - 30048485.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3122-2 - 30048485.md
@@ -1,9 +1,9 @@
 # Article R3122-2
 
 L'inscription au registre des voitures de transport avec chauffeur est effectuée dans un délai de deux mois à compter de
-l'envoi du dossier d'inscription par l'exploitant sous réserve de la transmission au gestionnaire du registre du récépissé de
-paiement des frais d'inscription prévus au quatrième alinéa de l'article L. 3122-3. Elle donne lieu à l'envoi d'une
-attestation d'inscription à l'exploitant. 
+l'envoi du dossier complet d'inscription par l'exploitant sous réserve de la transmission au gestionnaire du registre du
+récépissé de paiement des frais d'inscription prévus au quatrième alinéa de l'article L. 3122-3. Elle donne lieu à l'envoi
+d'une attestation d'inscription à l'exploitant. 
 
 L'inscription est refusée si le dossier est incomplet ou si les documents communiqués ne justifient pas de l'accomplissement
 par l'exploitant des obligations mentionnées au premier alinéa de l'article L. 3122-4. Ce refus intervient après qu'une mise
@@ -14,17 +14,22 @@ A la demande du titulaire formée au moins trois mois avant le terme de la duré
 l'autorité compétente renouvelle l'inscription avant ce terme, sauf si l'une des conditions auxquelles est soumise sa
 délivrance n'est pas remplie.
 
+**Nota:**
+
+Décret n° 2017-483 du 6 avril 2017, article 14 I : Ces dispositions entrent en vigueur à des dates fixées par arrêté du
+ministre chargé des transports, et au plus tard le 1er juillet 2017.
+
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. L3122-3 (V)
-	  - Code des transports - art. L3122-4 (V)
+	  - Code des transports - art. L3122-3
+	  - Code des transports - art. L3122-4
