--- a/02. PARTIE REGLEMENTAIRE/Article R3122-4 - 30048489.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3122-4 - 30048489.md
@@ -9,6 +9,13 @@ chauffeur.
 
 La radiation ne peut être prononcée qu'après une mise en demeure demeurée sans effet. La décision de radiation, qui est
 motivée, ainsi que la mise en demeure sont notifiées à l'exploitant par tout moyen permettant d'en accuser réception.
+Toutefois, la mise en demeure préalable est remplacée par une information préalable, lorsque la radiation est prononcée à la
+demande de l'exploitant ou lorsque le gestionnaire du registre a constaté que l'exploitant a cessé son activité.
+
+**Nota:**
+
+Décret n° 2017-483 du 6 avril 2017, article 14 I : Ces dispositions entrent en vigueur à des dates fixées par arrêté du
+ministre chargé des transports, et au plus tard le 1er juillet 2017.
 
 **Liens relatifs à cet article**
 
@@ -16,6 +23,6 @@ motivée, ainsi que la mise en demeure sont notifiées à l'exploitant par tout 
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 4
