--- a/02. PARTIE REGLEMENTAIRE/Article R3122-8 - 30048499.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3122-8 - 30048499.md
@@ -1,16 +1,20 @@
 # Article R3122-8
 
-Les voitures de transport avec chauffeur sont munies d'une signalétique distinctive définie par arrêté conjoint des ministres
-chargés, respectivement, de l'économie et des transports et du ministre de l'intérieur. Cette signalétique est retirée ou
-occultée, si le véhicule n'est pas utilisé en tant que voiture de transport avec chauffeur.
+Les voitures de transport avec chauffeur sont munies d'une signalétique distinctive définie par arrêté du ministre chargé des
+transports et délivrée par l'Imprimerie nationale.
+
+Le même arrêté prévoit également des dispositions spécifiques afin de permettre aux exploitants de disposer d'une
+signalétique temporaire en cas de recours exceptionnel à des véhicules en application du III de l'article R. 3122-1 ou après
+leur inscription au registre, ou à la suite d'une mise à jour de ce dernier.
+
+**Nota:**
+
+Décret n° 2017-483 du 6 avril 2017, article 14 I : Ces dispositions entrent en vigueur à des dates fixées par arrêté du
+ministre chargé des transports, et au plus tard le 1er juillet 2017.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -26,3 +30,7 @@ occultée, si le véhicule n'est pas utilisé en tant que voiture de transport a
 	  - Arrêté du 6 avril 2017 (V)
 	  - Arrêté du 6 avril 2017 - art. 1 (V)
 	  - Code des transports - art. R3124-6 (VD)
+
+	**Modifié par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 5
