--- a/02. PARTIE REGLEMENTAIRE/Article R3124-6 - 30048556.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3124-6 - 30048556.md
@@ -1,8 +1,13 @@
 # Article R3124-6
 
-Est puni de l'amende prévue pour les contraventions de la troisième classe, l'utilisation, par l'exploitant de voitures de
+Est puni de l'amende prévue pour les contraventions de la quatrième classe, l'utilisation, par l'exploitant de voitures de
 transport avec chauffeur, de véhicules sans la signalétique prévue à l'article R. 3122-8, ou avec une signalétique utilisée
 dans des conditions non conformes aux dispositions de cet article.
+
+**Nota:**
+
+Décret n° 2017-483 du 6 avril 2017, article 14 I : Ces dispositions entrent en vigueur à des dates fixées par arrêté du
+ministre chargé des transports, et au plus tard le 1er juillet 2017.
 
 **Liens relatifs à cet article**
 
@@ -10,13 +15,13 @@ dans des conditions non conformes aux dispositions de cet article.
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 8
 
 	**Cite**:
 
-	  - Code des transports - art. R3122-8 (V)
+	  - Code des transports - art. R3122-8
 
 	**Cité par**:
 
