--- a/01. PARTIE LEGISLATIVE/Article L5795-12 - 23078502.md
+++ b/01. PARTIE LEGISLATIVE/Article L5795-12 - 23078502.md
@@ -1,9 +1,9 @@
 # Article L5795-12
 
-Les marins embarqués sur les navires immatriculés au registre des Terres australes et antarctiques françaises sont soumis à
-la loi n° 52-1322 du 15 décembre 1952 modifiée instituant un code du travail dans les territoires et territoires associés
-relevant du ministère de la France d'outre-mer et aux conventions internationales du travail applicables dans les Terres
-australes et antarctiques françaises.
+Les gens de mer embarqués sur les navires immatriculés au registre des Terres australes et antarctiques françaises sont
+soumis à la loi n° 52-1322 du 15 décembre 1952 modifiée instituant un code du travail dans les territoires et territoires
+associés relevant du ministère de la France d'outre-mer et aux conventions internationales du travail applicables dans les
+Terres australes et antarctiques françaises.
 
 **Liens relatifs à cet article**
 
@@ -14,3 +14,7 @@ australes et antarctiques françaises.
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2016-1314 du 6 octobre 2016 - art. 3
