--- a/01. PARTIE LEGISLATIVE/Article L5795-4 - 23078522.md
+++ b/01. PARTIE LEGISLATIVE/Article L5795-4 - 23078522.md
@@ -6,13 +6,15 @@ Pour l'application dans les Terres australes et antarctiques françaises de l'ar
 " ; 
 
 2° A la fin du cinquième alinéa, les mots : " mentionné au III de l'article L. 5542-3 " sont remplacés par les mots : " à la
-part ".
+part ";
+
+3° Au dernier alinéa, les mots : " Par exception aux dispositions de l'article L. 5541-1, " ne sont pas applicables.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 16 (V)
+	  - Ordonnance n°2016-1314 du 6 octobre 2016 - art. 3
 
 	**Cite**:
 
