--- a/01. PARTIE LEGISLATIVE/Article L5795-6-1 - 27721126.md
+++ b/01. PARTIE LEGISLATIVE/Article L5795-6-1 - 27721126.md
@@ -1,26 +1,17 @@
 # Article L5795-6-1
 
-Pour l'application dans les Terres australes et antarctiques françaises de l'article L. 5546-1-9 : 
+Pour son application dans les Terres australes et antarctiques françaises l'article L. 5546-1-6 est ainsi rédigé : 
 
-1° Au I : 
+" Art. L. 5546-1-6.-Est entreprise de travail maritime toute personne, hors les entreprises de travail temporaire, dont
+l'activité est de mettre à disposition d'un armateur des gens de mer qu'elle embauche et rémunère à cet effet. 
 
-a) A la fin du premier alinéa, les mots : " ou une entreprise de travail maritime mentionnée à l'article L. 5546-1-6 " sont
-supprimés ; 
-
-b) A la fin du 1°, les mots : " ou être agréé en application de l'article L. 5546-1-6 " sont supprimés ; 
-
-c) Le 6° est supprimé ; 
-
-2° A la fin du II, les mots : " des peines prévues à l'article L. 5324-1 du code du travail " sont remplacés par les mots : "
-d'un emprisonnement de six mois et d'une amende de 3 750 € ".
+" Les entreprises de travail maritime établies en France sont soumises aux dispositions de la sous-section 2 du chapitre VI
+du titre IV du livre V de la présente partie. Elles ne sont autorisées à mettre à disposition des gens de mer qu'à bord des
+navires immatriculés aux Terres australes et antarctiques françaises, au registre international français ou de navires
+battant pavillon autre que français.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 30 (V)
-
-	**Cite**:
-
-	  - Code des transports - art. L5546-1-6 (V)
-	  - Code des transports - art. L5546-1-9 (V)
+	  - Ordonnance n°2016-1314 du 6 octobre 2016 - art. 3
